--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Movies gallore</title>
+  <title>Movies Galore</title>
   <link rel="stylesheet" href="jflix.css">
 </head>
 <body>
@@ -11,11 +11,12 @@
     <h1>jflix</h1>
   </header>
   <div id="content">
-
+    <!-- Left sidebar with list of films -->
     <ul id="films">
-      <li>Movie 1</li>
+      <!-- Movies will be dynamically added here -->
     </ul>
 
+    <!-- Movie details on the right -->
     <div id="movie-details">
       <img id="poster" src="" alt="Movie Poster">
       <h1 id="title"></h1>
