--- a/index.html
+++ b/index.html
@@ -3,28 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Movies Galore</title>
+  <title>Flatdango - Movie Theater</title>
   <link rel="stylesheet" href="jflix.css">
 </head>
 <body>
-  <header>
-    <h1>jflix</h1>
-  </header>
-  <div id="content">
-    <!-- Left sidebar with list of films -->
-    <ul id="films">
-      <!-- Movies will be dynamically added here -->
-    </ul>
-
-    <!-- Movie details on the right -->
-    <div id="movie-details">
-      <img id="poster" src="" alt="Movie Poster">
-      <h1 id="title"></h1>
-      <p id="runtime"></p>
-      <p id="showtime"></p>
-      <p id="available-tickets"></p>
-      <button id="buy-ticket">Buy Ticket</button>
+  <div id="main">
+    <h1>Welcome to Flatdango!</h1>
+    <div id="film-details">
+      <img id="film-poster" src="" alt="Movie Poster">
+      <h2 id="film-title"></h2>
+      <p id="film-description"></p>
+      <p>Runtime: <span id="film-runtime"></span> minutes</p>
+      <p>Showtime: <span id="film-showtime"></span></p>
+      <p>Tickets Available: <span id="available-tickets"></span></p>
+      <button id="buy-ticket-btn">Buy Ticket</button>
     </div>
+    <ul id="films"></ul>
   </div>
 
   <script src="jflix.js"></script>
